@@ -274,6 +274,8 @@ GetGroupParents=SELECT groupid FROM ixusergroup WHERE type=2 \
 
 
 #Diary
+WorstOffenders=SELECT ipaddr,count(*) AS count FROM comments WHERE publish < 3 GROUP BY ipaddr ORDER BY count DESC LIMIT 10;
+GetAdminCommentIDs=SELECT commentid FROM comments WHERE publish=2 ORDER BY createdate DESC
 GetAdminComments=SELECT c.*,a.title FROM comments AS c \
     INNER JOIN articles AS a ON a.articleid=c.entryid \
     WHERE c.publish=2 ORDER BY c.createdate DESC
