@@ -5,7 +5,7 @@
 %]
 
 <p>
-[% IF comcount %]<a href="[% cgipath %]/pages.cgi?act=diary-clist">Approval required on [% comcount %] comment[% IF comcount > 1 ; THEN ; 's' ; END %].</a>
+[% IF page.comments %]<a href="[% cgipath %]/pages.cgi?act=diary-clist">Approval required on [% page.comments %] comment[% IF page.comments > 1 ; THEN ; 's' ; END %].</a>
 [% ELSE %]No comments have been submitted for approval.
 [% END %]
 </p>
